<resources>
    <string name="app_name">QR Scanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="code_data">Code Data</string>
    <string name="scan">Scan</string>
    <string name="history">History</string>
    <string name="favorites">Favorites</string>
    <string name="add_contact">Add Contact</string>
    <string name="call">Call</string>
    <string name="scan_again">Scan Again</string>
    <string name="open_url">Open Url</string>
    <string name="open_mail">Open Mail</string>
    <string name="settings">Settings</string>
    <string name="text_2_qr_title">Enter the text you want to convert to a QR code.</string>
    <string name="url_2_qr_title">Enter the url you want to convert to a QR code.</string>
    <string name="contact_2_qr_title">Enter the contact you want to convert to a QR code.</string>
    <string name="email_2_qr_title">Enter the email you want to convert to a QR code.</string>
    <string name="sms_2_qr_title">Enter the phone number you want to convert to a QR code.</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="text">Text</string>
    <string name="url">URL</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="phone">Phone</string>
    <string name="type_your_text_here">Type your text here</string>
    <string name="enter_url_here">Enter url here</string>
    <string name="enter_contact_here">Enter contact here</string>
    <string name="enter_email_here">Enter email here</string>
    <string name="enter_email_message_here">Enter message here</string>
    <string name="enter_sms_here">Enter phone number here</string>
    <string name="enter_message_for_sms_here">Enter message here</string>
    <string name="enter_phone_here">Enter phone number here</string>
</resources>