<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.study.qrscanner.viewModel.QrDetailsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.QrDetailsFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_28dp"
                    android:background="@color/main_color"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.050000012">


                    <TextView
                        android:id="@+id/code_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/code_data"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/code_data_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_8dp"
                        android:text="@{viewModel.qrDetails.qrData}"
                        android:textColor="@color/white"
                        android:textIsSelectable="true"
                        android:textSize="@dimen/txt_16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/code_data"
                        app:layout_constraintVertical_bias="0.0" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_28dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/back_card"
                    android:elevation="@dimen/dimen_2dp"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                    app:layout_constraintVertical_bias="0.0">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_50dp"
                        android:padding="@dimen/dimen_8dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/format_icon"
                            android:layout_width="@dimen/dimen_24dp"
                            android:layout_height="@dimen/dimen_24dp"
                            android:src="@drawable/time_icon"
                            android:tint="@color/icon_c"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.5" />


                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="@dimen/dimen_0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="Formate"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/format_icon"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                        <TextView
                            android:id="@+id/qr_format"
                            android:layout_width="@dimen/dimen_0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text='@{viewModel.qrDetails.format +""}'
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/format_icon"
                            app:layout_constraintTop_toBottomOf="@+id/textView3"
                            app:layout_constraintVertical_bias="0.0" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginVertical="@dimen/dimen_4dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_8dp">


                        <TextView
                            android:id="@+id/date_time"
                            android:layout_width="@dimen/dimen_0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@{viewModel.qrDetails.date}"
                            android:textSize="@dimen/txt_16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/imageView"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/imageView"
                            android:layout_width="@dimen/dimen_24dp"
                            android:layout_height="@dimen/dimen_24dp"
                            android:src="@drawable/time_icon"
                            android:tint="@color/icon_c"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.5" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginVertical="@dimen/dimen_4dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/dimen_8dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/favorite"
                            android:layout_width="@dimen/dimen_24dp"
                            android:layout_height="@dimen/dimen_24dp"
                            android:layout_weight="1"
                            android:onClick="@{()-> viewModel.favoriteOnClick()}"
                            android:src="@drawable/star_unfill_ic"
                            android:tint="@color/icon_c"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.5" />

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/share"
                            android:layout_width="@dimen/dimen_24dp"
                            android:layout_height="@dimen/dimen_24dp"
                            android:layout_weight="1"
                            android:onClick="@{()->viewModel.shareOnClick()}"
                            android:src="@drawable/share_ic"
                            android:tint="@color/icon_c"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.5" />

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/copy"
                            android:layout_width="@dimen/dimen_24dp"
                            android:layout_height="@dimen/dimen_24dp"
                            android:layout_weight="1"
                            android:onClick="@{()->viewModel.copyOnClick()}"
                            android:src="@drawable/copy_ic"
                            android:tint="@color/icon_c"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.5" />


                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_contact"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24dp"
                    android:layout_marginTop="8dp"
                    android:onClick="@{()->viewModel.saveContact()}"
                    android:text="@string/add_contact"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    app:cornerRadius="@dimen/dimen_0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/call"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24dp"
                    android:layout_marginTop="8dp"
                    android:onClick="@{()->viewModel.makeCall()}"
                    android:text="@string/call"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    app:cornerRadius="@dimen/dimen_0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_contact"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/open_url"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24dp"
                    android:layout_marginTop="8dp"
                    android:onClick="@{()->viewModel.openUrl()}"
                    android:text="@string/open_url"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    app:cornerRadius="@dimen/dimen_0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/call"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/open_mail"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24dp"
                    android:layout_marginTop="8dp"
                    android:onClick="@{()->viewModel.openUrl()}"
                    android:text="@string/open_mail"
                    android:textColor="@color/white"
                    app:cornerRadius="@dimen/dimen_0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/open_url"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>